# pocketnn

./: .gitignore  LICENSE  README.md
PocketNN/: pktnn_examples.h  pktnn_loader.cpp  pktnn_loader.h
PocketNN_linux/: CMakeLists.txt
PocketNN_linux/PocketNN/: pktnn_actv.cpp  pktnn_consts.h  pktnn_conv.cpp  pktnn_examples.cpp  pktnn_fc.cpp  pktnn_layer.cpp  pktnn_layer.h  pktnn_loader.cpp  pktnn_loader.h  pktnn_mat3d.cpp  pktnn_tools.cpp
PocketNN_windows/PocketNN/: Main.cpp  PocketNN.sln  PocketNN.vcxproj  PocketNN.vcxproj.filters  pktnn_actv.h  pktnn_conv.h  pktnn_fc.h  pktnn_loss.cpp  pktnn_loss.h  pktnn_mat.cpp  pktnn_mat.h  pktnn_mat3d.h  pktnn_tools.h
PocketNN_windows/UnitTests/: UnitTests.vcxproj  pch.h
UnitTests/: UnitTests.cpp  UnitTests.vcxproj.filters  pch.cpp
_include/: youtube_embed.html
